--- a/flask-apple-store/templates/base.html
+++ b/flask-apple-store/templates/base.html
@@ -6,7 +6,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
     </head>
-    <body>
+    <body>  
         <nav class="navbar navbar-expand-lg bg-body-tertiary main-navbar">
             <div class="container-fluid">
                 <a href="/">
@@ -16,6 +16,21 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        {% for x in categoria_data %}
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown{{ x.CategoriaID }}" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    {{ x.Nome }}
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown{{ x.CategoriaID }}">
+                                    {% set produtos = get_produtos_por_categoria(x.CategoriaID) %}
+                                    {% for produto in produtos %}
+                                        <li><a class="dropdown-item" href="/product/{{ produto.ProdutoID }}">{{ produto.Nome }}</a></li>
+                                    {% endfor %}
+                                </ul>
+                            </li>
+                        {% endfor %}
+                    </ul>
                     <form class="d-flex position-relative" role="search" action="/pesquisa" method="get" autocomplete="off">
                         <input class="form-control me-2" type="search" id="pesquisa" name="q" placeholder="Pesquisar produto..." aria-label="Search" required>
                         <button type="submit">Pesquisar</button>
