Add login and register templates with routes and navbar navigation

--- a/flask-apple-store/templates/base.html
+++ b/flask-apple-store/templates/base.html
@@ -36,6 +36,12 @@
                         <button type="submit">Pesquisar</button>
                         <ul id="sugestoes" class="list-group position-absolute w-100 mt-5" style="z-index: 1000;"></ul>
                     </form>
+                    <button>
+                        <a href="/login" style="text-decoration: none;">Login</a>
+                    </button>
+                    <button>
+                        <a href="/register" style="text-decoration: none;">Registar</a>
+                    </button>
                 </div>
             </div>
         </nav>
