--- a/flask-apple-store/templates/base.html
+++ b/flask-apple-store/templates/base.html
@@ -36,12 +36,18 @@
                         <button type="submit">Pesquisar</button>
                         <ul id="sugestoes" class="list-group position-absolute w-100 mt-5" style="z-index: 1000;"></ul>
                     </form>
-                    <button>
-                        <a href="/login" style="text-decoration: none;">Login</a>
-                    </button>
-                    <button>
-                        <a href="/register" style="text-decoration: none;">Registar</a>
-                    </button>
+                    {% if session.get("nome") %}
+                        <button>
+                            <a href="/profile" style="text-decoration: none;">Perfil</a>
+                        </button>
+                    {% else %}
+                        <button>
+                            <a href="/login" style="text-decoration: none;">Login</a>
+                        </button>
+                        <button>
+                            <a href="/register" style="text-decoration: none;">Registar</a>
+                        </button>
+                    {% endif %}
                 </div>
             </div>
         </nav>
