--- a/flask-apple-store/templates/base.html
+++ b/flask-apple-store/templates/base.html
@@ -48,6 +48,9 @@
                             <a href="/register" style="text-decoration: none;">Registar</a>
                         </button>
                     {% endif %}
+                    <button>
+                        <a href="/favoritos" style="color: black;">❤️ Favoritos</a>
+                    </button>
                 </div>
             </div>
         </nav>
