Add shopping cart page with add-to-cart logic and routing

--- a/flask-apple-store/templates/base.html
+++ b/flask-apple-store/templates/base.html
@@ -51,6 +51,9 @@
                     <button>
                         <a href="/favoritos" style="color: black;">❤️ Favoritos</a>
                     </button>
+                    <button>
+                        <a href="/cart" style="text-decoration: none; color: black;">Carrinho</a>
+                    </button>
                 </div>
             </div>
         </nav>
